FIX: <br> for font align center h3 in cards of main.py

--- a/views/styless.css
+++ b/views/styless.css
@@ -130,7 +130,7 @@ div[data-testid="stMetricValue"] {
 .team-card h3 {
     font-size: 1.1em;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
     color: #041033;
 }
 
